--- a/style.css
+++ b/style.css
@@ -90,7 +90,8 @@ body {
     display: flex;
     gap: 20px;
     justify-content: center;
-    margin-top: 20px;
+    margin-top: 30px;
+    margin-bottom: 10px;
 }
 
 .buttons {
